modificati alcuni dettagli